Domain 5 - Security/capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged1
spec:
  containers:
  - name: privileged1
    image: nginx
    securityContext:
      capabilities:
        drop:
          - LINUX_IMMUTABLE
